# trajopt

./: .gitignore  CMakeLists.txt
grasping/: cost_vs_traj.py  costs.py  optimization.py  physics.py  rec_util.py  simple_env.py  test_direct_opt.py  test_linearize.py  test_linearize_2.py  test_moving_obstacles.py  test_obj_slide.py  test_opt_with_physics.py  test_physics.py  trajectories.py
grasping/experiments/: box_dynamics.py  box_dynamics_2.py  meshes.py  record_pushes.py  util.py
src/: CMakeLists.txt
src/dynamics/: CMakeLists.txt  box.cpp  box.h  box.hpp  contacts.cpp  contacts.hpp  dynamics_problem.cpp  dynamics_problem.hpp  test_box_dynamics.cpp  test_dynamics.cpp  test_multi_box.cpp  test_quat.cpp  util.h
src/humanoids/: CMakeLists.txt  robot_dynamics_experiment.cpp
src/osgviewer/: osgviewer.cpp  osgviewer.hpp
src/sandbox/: CMakeLists.txt  box.h  quaternion_optimization2.cpp  test_box_dynamics.cpp  test_dynamics.cpp
src/sco/: optimizers.cpp  optimizers.hpp
src/trajopt/: CMakeLists.txt  basic_array.hpp  bullet_collision_checker.cpp  collision_avoidance.cpp  collision_avoidance.hpp  collision_checker.cpp  plot_callback.cpp  problem_description.cpp  problem_description.hpp  robot_and_dof.hpp  scene_objectives.cpp  scene_objectives.hpp  trajoptpy.cpp  typedefs.hpp
src/trajopt/test/: collision-checker-unit.cpp
src/utils/: basic_array.hpp
trajoptpy/: make_kinbodies.py
